# Video-Chat-Streamlit

./: .env  .gitignore  README.md  design_spec.md  pyproject.toml  requirements.txt  streamlit_app.py  test_drone_agent.py
Video Explanations/: Drive Link.txt
chroma_db/: chroma.sqlite3
modules/: ai_handler.py  alert_engine.py  db_handler.py  dino_handler.py  sqlite_handler.py  video_analysis_engine.py  video_processor.py
